--- a/book.html
+++ b/book.html
@@ -1202,7 +1202,7 @@ input:checked + .toggle-slider:before {
                     <!-- Popular Services -->
                     <div class="bg-white rounded-lg shadow mt-6">
                         <div class="p-4 border-b border-gray-200 flex justify-between items-center">
-                            <h2 class="text-lg font-semibold">Popular Services</h2>
+                            <h2 class="text-lg font-semibold">My Services</h2>
                             <a href="#" class="text-sm text-yellow-500 hover:text-yellow-700 font-medium">Manage Services</a>
                         </div>
                         <div class="p-4">
