--- a/book.html
+++ b/book.html
@@ -769,7 +769,7 @@ input:checked + .toggle-slider:before {
                         Dashboard
                     </a>
                     
-                    <a href="#" class="sidebar-link flex items-center w-full px-4 py-2 rounded-lg transition" data-page="profile">
+                    <a href="profile.html" class="sidebar-link flex items-center w-full px-4 py-2 rounded-lg transition" data-page="profile">
                         <i class="fas fa-camera mr-3"></i>
                         Studio Profile
                     </a>
