--- a/book.html
+++ b/book.html
@@ -774,7 +774,7 @@ input:checked + .toggle-slider:before {
                         Studio Profile
                     </a>
                     
-                    <a href="#" class="sidebar-link flex items-center w-full px-4 py-2 rounded-lg transition" data-page="bookings">
+                    <a href="booking.html" class="sidebar-link flex items-center w-full px-4 py-2 rounded-lg transition" data-page="bookings">
                         <i class="fas fa-calendar-alt mr-3"></i>
                         Bookings
                     </a>
