--- a/booking.html
+++ b/booking.html
@@ -1,427 +1,7 @@
 <html>
 <head>
-  <style> /* FreezePix Studio Dashboard - Custom CSS */
+      <link rel="stylesheet" href="profilebooking.css">
 
-/* ===== Variables ===== */
-:root {
-  --primary: #FBBF24;
-  --primary-dark: #F59E0B;
-  --primary-light: #FDE68A;
-  --dark: #000000;
-  --dark-gray: #374151;
-  --medium-gray: #6B7280;
-  --light-gray: #F3F4F6;
-  --white: #FFFFFF;
-  --success: #10B981;
-  --warning: #F59E0B;
-  --danger: #EF4444;
-  --info: #3B82F6;
-}
-
-/* ===== Global Styles ===== */
-body {
-  font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: var(--light-gray);
-  color: #1F2937;
-}
-
-.pixelated {
-  image-rendering: pixelated;
-}
-
-/* ===== Animations ===== */
-.fade-in {
-  animation: fadeIn 0.3s ease-in-out;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-.slide-in {
-  animation: slideIn 0.3s ease-in-out;
-}
-
-@keyframes slideIn {
-  from { transform: translateY(20px); opacity: 0; }
-  to { transform: translateY(0); opacity: 1; }
-}
-
-/* ===== Logo Styles ===== */
-.logo-text {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-  letter-spacing: -0.05em;
-}
-
-.logo-text span {
-  color: var(--primary);
-}
-
-.logo-tagline {
-  font-family: 'Playfair Display', serif;
-  font-style: italic;
-  font-weight: 400;
-  font-size: 0.75rem;
-  letter-spacing: 0.05em;
-}
-
-/* ===== Pixel Elements ===== */
-.pixel-corner {
-  position: relative;
-}
-
-.pixel-corner::after {
-  content: '';
-  position: absolute;
-  top: -5px;
-  right: -5px;
-  width: 10px;
-  height: 10px;
-  background-color: var(--primary);
-}
-
-.pixel-border {
-  position: relative;
-  border: 2px solid transparent;
-  background-clip: padding-box;
-}
-
-.pixel-border::after {
-  content: '';
-  position: absolute;
-  top: -2px;
-  bottom: -2px;
-  left: -2px;
-  right: -2px;
-  background: repeating-linear-gradient(
-    0deg,
-    var(--primary),
-    var(--primary) 5px,
-    transparent 5px,
-    transparent 10px
-  );
-  z-index: -1;
-}
-
-/* ===== Sidebar Styles ===== */
-.sidebar {
-  background-color: var(--dark);
-  transition: transform 0.3s ease-in-out;
-}
-
-.sidebar-link {
-  transition: all 0.2s ease-in-out;
-}
-
-.sidebar-link.active {
-  background-color: var(--primary);
-  color: var(--dark);
-  font-weight: 500;
-}
-
-.sidebar-link:hover:not(.active) {
-  background-color: var(--dark-gray);
-}
-
-.profile-completion-progress {
-  transition: width 1s ease-in-out;
-}
-
-/* ===== Button Styles ===== */
-.btn-primary {
-  background-color: var(--primary);
-  color: var(--dark);
-  transition: all 0.2s ease-in-out;
-}
-
-.btn-primary:hover {
-  background-color: var(--primary-dark);
-}
-
-.btn-outline {
-  border: 1px solid var(--medium-gray);
-  transition: all 0.2s ease-in-out;
-}
-
-.btn-outline:hover {
-  background-color: var(--light-gray);
-}
-
-/* ===== Card and Container Styles ===== */
-.card {
-  background-color: var(--white);
-  border-radius: 0.5rem;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  transition: all 0.2s ease-in-out;
-}
-
-.card:hover {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.card-highlight {
-  border-left: 4px solid var(--primary);
-}
-
-.container-smooth {
-  border-radius: 1rem;
-  padding: 1.5rem;
-  background-color: var(--white);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-}
-
-/* ===== Table Styles ===== */
-.table-responsive {
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-.table-header {
-  background-color: var(--light-gray);
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  font-size: 0.75rem;
-  color: var(--medium-gray);
-}
-
-.table-row {
-  border-bottom: 1px solid var(--light-gray);
-  transition: background-color 0.2s ease-in-out;
-}
-
-.table-row:hover {
-  background-color: rgba(251, 191, 36, 0.05);
-}
-
-/* ===== Status Badges ===== */
-.badge {
-  padding: 0.25rem 0.5rem;
-  border-radius: 9999px;
-  font-size: 0.75rem;
-  font-weight: 600;
-  text-transform: capitalize;
-}
-
-.badge-success {
-  background-color: rgba(16, 185, 129, 0.1);
-  color: var(--success);
-}
-
-.badge-warning {
-  background-color: rgba(245, 158, 11, 0.1);
-  color: var(--warning);
-}
-
-.badge-danger {
-  background-color: rgba(239, 68, 68, 0.1);
-  color: var(--danger);
-}
-
-.badge-info {
-  background-color: rgba(59, 130, 246, 0.1);
-  color: var(--info);
-}
-
-/* ===== Form Styles ===== */
-.form-input {
-  width: 100%;
-  padding: 0.5rem 0.75rem;
-  border: 1px solid var(--medium-gray);
-  border-radius: 0.375rem;
-  transition: all 0.2s ease-in-out;
-}
-
-.form-input:focus {
-  outline: none;
-  border-color: var(--primary);
-  box-shadow: 0 0 0 3px rgba(251, 191, 36, 0.2);
-}
-
-.form-label {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-  color: var(--dark-gray);
-}
-
-/* ===== Toggle Switch ===== */
-.toggle-switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 20px;
-}
-
-.toggle-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.toggle-slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: .4s;
-  border-radius: 34px;
-}
-
-.toggle-slider:before {
-  position: absolute;
-  content: "";
-  height: 16px;
-  width: 16px;
-  left: 2px;
-  bottom: 2px;
-  background-color: white;
-  transition: .4s;
-  border-radius: 50%;
-}
-
-input:checked + .toggle-slider {
-  background-color: var(--primary);
-}
-
-input:focus + .toggle-slider {
-  box-shadow: 0 0 1px var(--primary);
-}
-
-input:checked + .toggle-slider:before {
-  transform: translateX(20px);
-}
-
-/* ===== Calendar Styles ===== */
-.calendar-grid {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  gap: 2px;
-}
-
-.calendar-day {
-  aspect-ratio: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.25rem;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-
-.calendar-day:hover:not(.calendar-day-disabled) {
-  background-color: rgba(251, 191, 36, 0.1);
-}
-
-.calendar-day.has-booking {
-  background-color: rgba(251, 191, 36, 0.2);
-  border: 1px solid var(--primary);
-}
-
-.calendar-day.break-day {
-  background-color: rgba(239, 68, 68, 0.1);
-  border: 1px solid var(--danger);
-}
-
-.calendar-day.calendar-day-disabled {
-  color: var(--medium-gray);
-  pointer-events: none;
-}
-
-.calendar-day.today {
-  background-color: var(--primary);
-  color: var(--dark);
-  font-weight: 600;
-}
-
-/* ===== Modal Styles ===== */
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 50;
-}
-
-.modal-content {
-  background-color: var(--white);
-  border-radius: 0.5rem;
-  width: 100%;
-  max-width: 32rem;
-  max-height: 90vh;
-  overflow-y: auto;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-}
-
-.modal-header {
-  padding: 1rem;
-  border-bottom: 1px solid var(--light-gray);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.modal-body {
-  padding: 1rem;
-}
-
-.modal-footer {
-  padding: 1rem;
-  border-top: 1px solid var(--light-gray);
-  display: flex;
-  justify-content: flex-end;
-  gap: 0.5rem;
-}
-
-/* ===== Responsive Design ===== */
-@media (max-width: 640px) {
-  .calendar-day {
-    font-size: 0.75rem;
-  }
-  
-  .container-smooth {
-    padding: 1rem;
-  }
-}
-
-@media (max-width: 768px) {
-  .sidebar {
-    transform: translateX(-100%);
-  }
-  
-  .sidebar.open {
-    transform: translateX(0);
-  }
-}
-
-/* ===== Custom Scrollbar ===== */
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--light-gray);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--primary);
-  border-radius: 3px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: var(--primary-dark);
-}</style>
 </head>
 <body>
 <!-- Studio Profile Page -->
