--- a/book.html
+++ b/book.html
@@ -779,7 +779,7 @@ input:checked + .toggle-slider:before {
                         Bookings
                     </a>
                     
-                    <a href="#" class="sidebar-link flex items-center w-full px-4 py-2 rounded-lg transition" data-page="services">
+                    <a href="services.html" class="sidebar-link flex items-center w-full px-4 py-2 rounded-lg transition" data-page="services">
                         <i class="fas fa-box mr-3"></i>
                         Services
                     </a>
